removed unnec. div and used gap to fix margin render delay

--- a/src/components/loadingScreen/style.css
+++ b/src/components/loadingScreen/style.css
@@ -4,24 +4,23 @@
   height: 100vh;
   width: 100%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+  gap: 0.5rem;
   transition: opacity 0.5s;
   z-index: 1000;
   background: var(--background-color-100);
 
-  .loading-wrapper{
+  > h3{
+    letter-spacing: 1px;
+    color: var(--accent-color-100);
+  }
 
-    > h3{
-      letter-spacing: 1px;
-      color: var(--accent-color-100);
-    }
-
-    > h1{
-      margin-top: 0.5rem;
-      animation: pulse 1s infinite linear;
-      color: var(--light-color-200);
-    }
+  > h1{
+    margin-top: 0.5rem;
+    animation: pulse 1s infinite linear;
+    color: var(--light-color-200);
   }
 }
 
